[package]
name = "swapper"
version = "0.0.4"
authors = ["ajeffrey@mozilla.com"]
repository = "https://github.com/asajeffrey/swapper"
documentation = "https://docs.rs/swapper"
description = "Swap ownership between threads"
keywords = ["concurrency"]
license = "MPL-2.0"
build = "build.rs"

[lib]

[build-dependencies]
skeptic = "0.9"

[dev-dependencies]
skeptic = "0.9"
